Opened 5 years ago
Closed 5 years ago
#16267 closed bug (fixed)
Input preferences crash when adjusting touchpad settings
Reported by: | tatoomi | Owned by: | PreetpalKaur |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta3 |
Component: | Preferences/Input | Version: | R1/beta2 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
since Hrev 54326 the touchpad utility is back -Thank you- But as soon as you want to adjust the utility 'input "crash
Attachments (1)
Change History (9)
by , 5 years ago
Attachment: | Input-1241-debug-15-06-2020-14-16-31.report added |
---|
comment:1 by , 5 years ago
Component: | Drivers/Input → Preferences/Input |
---|
comment:2 by , 5 years ago
Summary: | input utility crash → Input preferences crash when adjusting touchpad settings |
---|
comment:3 by , 5 years ago
I'm looking into this ticket and would like to be assigned to prevent duplicate work. I can see why it crashes: InputTouchpadPref.h the class has a BInputDevice pointer called fTouchPad, this in turn is called in InputTouchpadPref.cpp but from what I can tell this will always be a nullpointer, as no value is ever set.
I'm trying to figure out how to set it, pointers are welcome :-)
comment:4 by , 5 years ago
The device is passed to the constructor here:
https://git.haiku-os.org/haiku/tree/src/preferences/input/InputWindow.cpp#n184
But the constructor does not do anything with it:
https://git.haiku-os.org/haiku/tree/src/preferences/input/InputTouchpadPrefView.cpp#n267
comment:5 by , 5 years ago
What a miss... I keep misreading the code for this application. Thank you! I see this is assigned to PreetpalKaur, but I hope it's okay by him that I'm looking at it. If nothing else it lets me dig into more code and feel some sort of success.
comment:6 by , 5 years ago
Yes, she is the default owner of tickets on Input preferences as the main author of it. The ticket is not marked in-progress so it's fine to work on it.
comment:7 by , 5 years ago
Funnily, you already have a fix for it here: https://review.haiku-os.org/c/haiku/+/1590 :)
Gerrit made me aware of that so I abandoned my patch (also you did it better anyhow.) I could extract your changes for the crash into a patch specifically for this ticket, perhaps? That way the bug gets fixed without introducing new features.
comment:8 by , 5 years ago
Milestone: | Unscheduled → R1/beta3 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Report