Set input device for Trackpad settings

Fixes #16267